Text files updated to OF6 and bugs fixed

--- a/WindGhC/WindGhC/WindGhC.csproj
+++ b/WindGhC/WindGhC/WindGhC.csproj
@@ -64,6 +64,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TextFilesResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\2SOFiSTiK.cs" />
     <Compile Include="Utilities\Assembly.cs" />
     <Compile Include="constant\BlockMeshDict.cs" />
     <Compile Include="system\ControlDict.cs" />
